--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <h2 class="text-2xl font-bold mb-8 text-center text-gray-800">Gallery</h2>
       <div class="relative w-full overflow-hidden">
         <div class="flex transition-transform duration-500 ease-in-out" id="galleryCarousel">
-          <img src="https://via.placeholder.com/300x200?text=Bed+Project+Photo" alt="Bed Project Photo" class="w-1/4 flex-shrink-0">
+          <img src="https://drive.google.com/file/d/1MGkPM_uvAbHuRgizbxUv5IRv5gp6xySA/view?usp=drive_link">
           <img src="https://via.placeholder.com/300x200?text=Mancala+Training+Photo" alt="Mancala Training Photo" class="w-1/4 flex-shrink-0">
           <img src="https://via.placeholder.com/300x200?text=Students+Learning+Photo" alt="Students Learning Photo" class="w-1/4 flex-shrink-0">
           <img src="https://via.placeholder.com/300x200?text=Community+Event+Photo" alt="Community Event Photo" class="w-1/4 flex-shrink-0">
