--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           &gt;
         </button>
       </div>
-      <p class="mt-4 text-center text-gray-600">*Images are placeholders. Please replace with actual photo URLs (e.g., upload to Imgur or Google Drive and update the 'src' attributes).</p>
+      <p class="mt-4 text-center text-gray-600"></p>
     </div>
   </section>
 
