--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="carousel-panel">
             <h3 class="text-1xl font-semibold mb-4 text-blue-600">About Us</h3>
             <p class="text-gray-700 leading-relaxed">
-              TAI-Sa (Tradition and Arts for Isolo and Science) is a non-profit CBO (Reg. No. MDC/CBO/4196) based in Magu District, Mwanza, Tanzania. We support young science students, promote traditional games like Mancala, and enhance educational opportunities in rural areas. The CBO is led by Amos Kiyumbi, a PhD candidate at Stellenbosch University and an academic staff at UDSM, we aim to train the next generation in nanotechnology and photonics.
+              TAI-Sa (Tradition and Arts for Isolo and Science) is a non-profit community-based organisation (CBO), Reg. No. MDC/CBO/4196, based in Magu District, Mwanza, Tanzania. We support young science students, promote traditional games like Mancala, and enhance educational opportunities in rural areas. The CBO is led by Mr. Amos Kiyumbi, a PhD candidate at Stellenbosch University and an academic staff at the University of Dar es Salaam (UDSM), we aim to train the next generation in nanotechnology and photonics.
             </p>
           </div>
           <div class="carousel-panel">
