--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
             <h3 class="text-xl/2 font-semibold mb-2">Science and Mancala Training</h3>
             <p class="text-gray-700">Training rural students in science and traditional Mancala games to foster critical thinking and cultural preservation.</p>
           </div>
+          <div class="bg-white p-6 rounded-lg shadow-md w-1/2 flex-shrink-0">
+            <h3 class="text-xl/2 font-semibold mb-2">Science and Mancala Training</h3>
+            <p class="text-gray-700">Training rural students in science and traditional Mancala games to foster critical thinking and cultural preservation.</p
         </div>
         <button id="prevProjectsBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
           &lt;
