--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <h2 class="text-2xl font-bold mb-8 text-center text-gray-800">Gallery</h2>
       <div class="relative w-full overflow-hidden">
         <div class="flex transition-transform duration-500 ease-in-out" id="galleryCarousel">
-          <img src="https://drive.google.com/file/d/1MGkPM_uvAbHuRgizbxUv5IRv5gp6xySA/view?usp=drive_link">
+          <img src="images/head_office.jpg">
           <img src="https://drive.google.com/file/d/1MGkPM_uvAbHuRgizbxUv5IRv5gp6xySA/view?usp=drive_link">
           <img src="https://via.placeholder.com/300x200?text=Students+Learning+Photo" alt="Students Learning Photo" class="w-1/4 flex-shrink-0">
           <img src="https://via.placeholder.com/300x200?text=Community+Event+Photo" alt="Community Event Photo" class="w-1/4 flex-shrink-0">
@@ -212,7 +212,7 @@
       <p class="text-gray-700 mb-4">Reach out for more information or to arrange a visit.</p>
       <div class="flex justify-center space-x-4">
         <a href="tel:+255758376360" class="text-blue-600 hover:underline"><i class="fas fa-phone"></i> +255 758376360</a>
-        <a href="mailto:info@taisa.org" class="text-blue-600 hover:underline"><i class="fas fa-envelope"></i> director@taisa.org.tz</a>
+        <a href="mailto:director@taisa.org" class="text-blue-600 hover:underline"><i class="fas fa-envelope"></i> director@taisa.org.tz</a>
       </div>
     </div>
   </section>
