--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <div class="relative w-full overflow-hidden">
         <div class="flex transition-transform duration-500 ease-in-out" id="galleryCarousel">
           <img src="images/Head_office.jpg" alt="TAI-Sa head office design" class="w-1/4 flex-shrink-0">
-          <img src="images/IMG_0393.jpg" alt="TAI-Sa head office design" class="w-1/4 flex-shrink-0">
+          <img src="images/logo.jpg" alt="TAI-Sa head office design" class="w-1/4 flex-shrink-0">
           <img src="https://via.placeholder.com/300x200?text=Students+Learning+Photo" alt="Students Learning Photo" class="w-1/4 flex-shrink-0">
           <img src="https://via.placeholder.com/300x200?text=Community+Event+Photo" alt="Community Event Photo" class="w-1/4 flex-shrink-0">
         </div>
