--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
         <div class="flex transition-transform duration-500 ease-in-out" id="galleryCarousel">
           <img src="images/Head_office.jpg" alt="TAI-Sa head office design" class="w-1/4 flex-shrink-0">
           <img src="images/logo.jpg" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
-          <img src="images/IMG_0389.jpg" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
-          <img src="images/IMG_0389.jpg" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
-          <img src="images/IMG_0381.jpg" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
-          <img src="images/IMG_0390.jpg" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
+          <img src="images/IMG_0389.JPG" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
+          <img src="images/IMG_0389.JPG" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
+          <img src="images/IMG_0381.JPG" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
+          <img src="images/IMG_0390.JPG" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
         </div>
         <button id="prevBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
           &lt;
