--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </header>
 
   <!-- Home Section -->
-  <section id="home" class="py-16 bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80');">
+  <section id="home" class="py-16 bg-cover bg-center" style="background-image: url('images\taisa_image.jpg');">
     <div class="container mx-auto text-center text-white bg-black bg-opacity-50 p-6 rounded-lg">
       <h1 class="text-4xl font-bold mb-4">Welcome to TAI-Sa</h1>
       <p class="text-white text-lg mt-2">...Tradition and Arts for Isolo and Science...</p>
