--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
   <style>
     #sectionsContainer {
       width: 100%;
-      min-height: 400px; /* Increased to accommodate more text */
+      min-height: 200px; /* Increased to accommodate more text */
       overflow: hidden;
       position: relative;
     }
     #sectionsCarousel {
-      width: 400%; /* Four panels */
+      width: 200%; /* Four panels */
       display: flex;
       transition: transform 1.5s ease-in-out; /* Slower transition */
     }
@@ -179,7 +179,7 @@
       <h2 class="text-2xl font-bold mb-8 text-center text-gray-800">Gallery</h2>
       <div class="relative w-full overflow-hidden">
         <div class="flex transition-transform duration-500 ease-in-out" id="galleryCarousel">
-          <img src="images/Head_office.jpg" alt="TAI-Sa head office design" class="w-1/4 flex-shrink-0">
+          <img src="images/Head_office.jpg">
           <img src="images/logo.jpg" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
           <img src="images/IMG_0389.JPG" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
           <img src="images/IMG_0381.JPG" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
