--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <img src="images/bao_1.JPG" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
                 <img src="images/bao_2.JPG" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
                 <img src="images/bao_3.JPG" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
-                <img src="images/head_office_new" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
+                <img src="images/head_office_new.jpg" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
         </div>
         <button id="prevBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
           &lt;
