--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <h2 class="text-2xl font-bold mb-8 text-gray-800">Support Our Cause</h2>
       <p class="text-gray-700 mb-4">Donate to provide beds or support science education. Contributions can be made as beds or funds.</p>
       <button class=" text-blue px-6 py-3 rounded-lg hover:bg-blue-700">Donate Now</button>
-      <p class="mt-4 text-sm">Contact us for donation details: 0758376360 (Director), 0759310902 (Coordinator).</p>
+      <p class="mt-4 text-sm">Contact us for donation details: 0758376360 (Director, Mr. Amos Kiyumbi), 0759310902 (Coordinator, Mr. Thomas Lugendo).</p>
     </div>
   </section>
 
