--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         }
         return gk_fileData[filename] || "";
         }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -87,39 +87,110 @@
   <style>
     #sectionsContainer {
       width: 100%;
-      min-height: 200px; /* Increased to accommodate more text */
+      min-height: 200px;
       overflow: hidden;
       position: relative;
     }
     #sectionsCarousel {
-      width: 200%; /* Four panels */
+      width: 200%;
       display: flex;
-      transition: transform 1.5s ease-in-out; /* Slower transition */
+      transition: transform 1.5s ease-in-out;
     }
     .carousel-panel {
-      width: 25%; /* Each panel takes 25% */
+      width: 25%;
       flex-shrink: 0;
-      padding: 2.5rem; /* Increased padding for better spacing */
+      padding: 2.5rem;
       background-color: white;
       border-radius: 0.5rem;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease;
-      text-align: left; /* Justified to the left */
+      text-align: left;
     }
     .carousel-panel:hover {
-      transform: translateY(-5px); /* Slight lift on hover */
+      transform: translateY(-5px);
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
     }
     #prevSectionBtn, #nextSectionBtn {
       z-index: 10;
     }
+    #featuredVideo {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      width: 300px;
+      background-color: rgba(0, 0, 0, 0.8);
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+      z-index: 1000;
+      display: none;
+    }
+    #featuredVideo.show {
+      display: block;
+    }
+    #closeVideo {
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      color: white;
+      cursor: pointer;
+      font-size: 1.5rem;
+    }
+    video {
+      width: 100%;
+      height: auto;
+      border-radius: 4px;
+    }
   </style>
+  <script type="text/javascript">
+    var gk_isXlsx = false;
+    var gk_xlsxFileLookup = {};
+    var gk_fileData = {};
+    function filledCell(cell) {
+      return cell !== '' && cell != null;
+    }
+    function loadFileData(filename) {
+      if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+        try {
+          var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+          var firstSheetName = workbook.SheetNames[0];
+          var worksheet = workbook.Sheets[firstSheetName];
+          var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+          var filteredData = jsonData.filter(row => row.some(filledCell));
+          var headerRowIndex = filteredData.findIndex((row, index) =>
+            row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+          );
+          if (headerRowIndex === -1 || headerRowIndex > 25) {
+            headerRowIndex = 0;
+          }
+          var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex));
+          csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+          return csv;
+        } catch (e) {
+          console.error(e);
+          return "";
+        }
+      }
+      return gk_fileData[filename] || "";
+    }
+    // Video control script
+    window.addEventListener('scroll', function() {
+      var video = document.getElementById('featuredVideo');
+      if (window.scrollY > 100) { // Show video after scrolling 100px
+        video.classList.add('show');
+      } else {
+        video.classList.remove('show');
+      }
+    });
+    function closeVideo() {
+      document.getElementById('featuredVideo').classList.remove('show');
+    }
+  </script>
 </head>
 <body class="bg-gray-100 font-sans">
   <!-- Header -->
   <header class="bg-blue-600 text-white p-4 relative">
     <div class="container mx-auto flex justify-between items-center">
-      <!-- Placeholder for TAI-Sa Logo with Full Name - Replace with actual logo URL -->
       <div>
         <span class="text-2xl font-bold">TAI-Sa</span>
       </div>
@@ -135,7 +206,7 @@
   </header>
 
   <!-- Home Section -->
-  <section id="home" class="py-16 bg-cover bg-center" style="background-image:  url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80');">
+  <section id="home" class="py-16 bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80');">
     <div class="container mx-auto text-center text-white bg-black bg-opacity-50 p-6 rounded-lg">
       <h1 class="text-4xl font-bold mb-4">Welcome to TAI-Sa</h1>
       <p class="text-white text-lg mt-2">...Tradition and Arts for Isolo and Science...</p>
@@ -174,10 +245,10 @@
             </p>
           </div>
         </div>
-        <button id="prevSectionBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
+        <button id="prevSectionBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2 bg-blue-600 text-white p-3 rounded-full hover:bg-blue-700">
           &lt;
         </button>
-        <button id="nextSectionBtn" class="absolute right-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
+        <button id="nextSectionBtn" class="absolute right-4 top-1/2 transform -translate-y-1/2 bg-blue-600 text-white p-3 rounded-full hover:bg-blue-700">
           &gt;
         </button>
       </div>
@@ -191,23 +262,24 @@
       <div class="relative w-full overflow-hidden">
         <div class="flex transition-transform duration-500 ease-in-out" id="projectsCarousel">
           <div class="bg-white p-6 rounded-lg shadow-md w-1/2 flex-shrink-0">
-            <h3 class="text-xl/2 font-semibold mb-2">Bed Project for Isendelo Secondary School</h3>
+            <h3 class="text-xl font-semibold mb-2">Bed Project for Isendelo Secondary School</h3>
             <p class="text-gray-700">Providing 20 beds for 40 female students preparing for national exams, ensuring a safe sleeping environment to boost academic success.</p>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md w-1/2 flex-shrink-0">
-            <h3 class="text-xl/2 font-semibold mb-2">Science and Mancala Training</h3>
+            <h3 class="text-xl font-semibold mb-2">Science and Mancala Training</h3>
             <p class="text-gray-700">Training rural students in science and traditional Mancala games to foster critical thinking and cultural preservation.</p>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md w-1/2 flex-shrink-0">
-            <h3 class="text-xl/2 font-semibold mb-2">Our long-term plan</h3>
-            <p class="text-gray-700">Build and run a tuition-free TAI-Sa Science boarding school for financially disadvantaged students and young science frontiers in rural/village areas.</p
+            <h3 class="text-xl font-semibold mb-2">Our long-term plan</h3>
+            <p class="text-gray-700">Build and run a tuition-free TAI-Sa Science boarding school for financially disadvantaged students and young science frontiers in rural/village areas.</p>
+          </div>
+          <button id="prevProjectsBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2 bg-blue-600 text-white p-3 rounded-full hover:bg-blue-700">
+            &lt;
+          </button>
+          <button id="nextProjectsBtn" class="absolute right-4 top-1/2 transform -translate-y-1/2 bg-blue-600 text-white p-3 rounded-full hover:bg-blue-700">
+            &gt;
+          </button>
         </div>
-        <button id="prevProjectsBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
-          &lt;
-        </button>
-        <button id="nextProjectsBtn" class="absolute right-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
-          &gt;
-        </button>
       </div>
     </div>
   </section>
@@ -219,15 +291,15 @@
       <div class="relative w-full overflow-hidden">
         <div class="flex transition-transform duration-500 ease-in-out" id="galleryCarousel">
           <img src="images/taisa_image.jpg" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
-                <img src="images/bao_1.JPG" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
-                <img src="images/bao_2.JPG" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
-                <img src="images/bao_3.JPG" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
-                <img src="images/head_office_new.jpg" alt="TAI-Sa official logo" class="w-1/4 flex-shrink-0">
+          <img src="images/bao_1.JPG" alt="Bao game board" class="w-1/4 flex-shrink-0">
+          <img src="images/bao_2.JPG" alt="Bao game in progress" class="w-1/4 flex-shrink-0">
+          <img src="images/bao_3.JPG" alt="Another Bao board" class="w-1/4 flex-shrink-0">
+          <img src="images/head_office_new.jpg" alt="TAI-Sa head office" class="w-1/4 flex-shrink-0">
         </div>
-        <button id="prevBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
+        <button id="prevBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2 bg-blue-600 text-white p-3 rounded-full hover:bg-blue-700">
           &lt;
         </button>
-        <button id="nextBtn" class="absolute right-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
+        <button id="nextBtn" class="absolute right-4 top-1/2 transform -translate-y-1/2 bg-blue-600 text-white p-3 rounded-full hover:bg-blue-700">
           &gt;
         </button>
       </div>
@@ -240,13 +312,13 @@
     <div class="container mx-auto text-center">
       <h2 class="text-2xl font-bold mb-8 text-gray-800">Support Our Cause</h2>
       <p class="text-gray-700 mb-4">Donate to provide beds or support science education. Contributions can be made as beds or funds.</p>
-      <button class=" text-blue px-6 py-3 rounded-lg hover:bg-blue-700">Donate Now</button>
+      <button class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700">Donate Now</button>
       <p class="mt-4 text-sm">Contact us for donation details: 0758376360 (Director, Mr. Amos Kiyumbi), 0759310902 (Coordinator, Mr. Thomas Lugendo).</p>
     </div>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="py-16 bg-white">
+  <section id="contact" class="py-16">
     <div class="container mx-auto text-center">
       <h2 class="text-2xl font-bold mb-8 text-gray-800">Contact Us</h2>
       <p class="text-gray-700 mb-4">Reach out for more information or to arrange a visit.</p>
@@ -261,6 +333,16 @@
   <footer class="bg-blue-600 text-white p-4 text-center">
     <p>&copy; 2025 TAI-Sa. All rights reserved.</p>
   </footer>
+
+  <!-- Featured Video -->
+  <div id="featuredVideo">
+    <span id="closeVideo" onclick="closeVideo()">&times;</span>
+    <h3 class="text-white text-lg mb-2">Featured Video</h3>
+    <video controls>
+      <source src="images/featured_video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
 
   <script>
     // Projects Carousel
@@ -325,10 +407,10 @@
     let sectionIndex = 0;
     let slideInterval;
     const totalSections = sectionsCarousel.children.length;
-    const sectionItemWidth = 25; // 25% per panel
+    const sectionItemWidth = 25;
 
     function updateSectionsCarousel() {
-      console.log("Updating to index:", sectionIndex); // Debug log
+      console.log("Updating to index:", sectionIndex);
       sectionsCarousel.style.transform = `translateX(-${sectionIndex * sectionItemWidth}%)`;
     }
 
@@ -338,7 +420,7 @@
           sectionIndex = (sectionIndex + 1) % totalSections;
           updateSectionsCarousel();
         }
-      }, 5000); // 5-second interval
+      }, 5000);
     }
 
     function stopSlide() {
@@ -348,7 +430,7 @@
     sectionsContainer.addEventListener('mouseover', stopSlide);
     sectionsContainer.addEventListener('mouseout', startSlide);
 
-    startSlide(); // Start the interval on load
+    startSlide();
 
     nextSectionBtn.addEventListener('click', () => {
       sectionIndex = (sectionIndex + 1) % totalSections;
@@ -360,7 +442,6 @@
       updateSectionsCarousel();
     });
 
-    // Ensure carousel initializes on page load
     window.onload = function() {
       if (sectionsCarousel) updateSectionsCarousel();
     };
