--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         }
         return gk_fileData[filename] || "";
         }
-<!DOCTYPE html>
+</script><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
