--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 </head>
 <body class="bg-gray-100 font-sans">
   <!-- Header -->
-  <header class="bg-blue-600 text-white p-4 relative">
+  <header class=" text-white p-4 relative">
     <div class="container mx-auto flex justify-between items-center">
       <div>
         <span class="text-2xl font-bold">TAI-Sa</span>
@@ -245,10 +245,10 @@
             </p>
           </div>
         </div>
-        <button id="prevSectionBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2 bg-blue-600 text-white p-3 rounded-full hover:bg-blue-700">
+        <button id="prevSectionBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
           &lt;
         </button>
-        <button id="nextSectionBtn" class="absolute right-4 top-1/2 transform -translate-y-1/2 bg-blue-600 text-white p-3 rounded-full hover:bg-blue-700">
+        <button id="nextSectionBtn" class="absolute right-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
           &gt;
         </button>
       </div>
@@ -273,10 +273,10 @@
             <h3 class="text-xl font-semibold mb-2">Our long-term plan</h3>
             <p class="text-gray-700">Build and run a tuition-free TAI-Sa Science boarding school for financially disadvantaged students and young science frontiers in rural/village areas.</p>
           </div>
-          <button id="prevProjectsBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2 bg-blue-600 text-white p-3 rounded-full hover:bg-blue-700">
+          <button id="prevProjectsBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
             &lt;
           </button>
-          <button id="nextProjectsBtn" class="absolute right-4 top-1/2 transform -translate-y-1/2 bg-blue-600 text-white p-3 rounded-full hover:bg-blue-700">
+          <button id="nextProjectsBtn" class="absolute right-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
             &gt;
           </button>
         </div>
@@ -296,10 +296,10 @@
           <img src="images/bao_3.JPG" alt="Another Bao board" class="w-1/4 flex-shrink-0">
           <img src="images/head_office_new.jpg" alt="TAI-Sa head office" class="w-1/4 flex-shrink-0">
         </div>
-        <button id="prevBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2 bg-blue-600 text-white p-3 rounded-full hover:bg-blue-700">
+        <button id="prevBtn" class="absolute left-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
           &lt;
         </button>
-        <button id="nextBtn" class="absolute right-4 top-1/2 transform -translate-y-1/2 bg-blue-600 text-white p-3 rounded-full hover:bg-blue-700">
+        <button id="nextBtn" class="absolute right-4 top-1/2 transform -translate-y-1/2  text-white p-3 rounded-full hover:bg-blue-700">
           &gt;
         </button>
       </div>
