--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
   </section>
 
   <!-- Donate Section -->
-  <section id="donate" class="py-16 bg-gray-100">
+  <section id="donate" class="py-16 bg-white-100">
     <div class="container mx-auto text-center">
       <h2 class="text-2xl font-bold mb-8 text-gray-800">Support Our Cause</h2>
       <p class="text-gray-700 mb-4">Donate to provide beds or support science education. Contributions can be made as beds or funds.</p>
