--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 </head>
 <body class="bg-gray-100 font-sans">
   <!-- Header -->
-  <header class=" text-white p-4 relative">
+  <header class="bg-blue-600 text-white p-4 relative">
     <div class="container mx-auto flex justify-between items-center">
       <div>
         <span class="text-2xl font-bold">TAI-Sa</span>
