--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     <span id="closeVideo" onclick="closeVideo()">&times;</span>
     <h3 class="text-white text-lg mb-2">Featured TAI-Sa Video</h3>
     <video controls>
-      <source src="images/featured_video.mp4" type="video/mp4">
+      <source src="images/nyerere.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
