--- a/index.html
+++ b/index.html
@@ -311,7 +311,14 @@
   <section id="donate" class="py-16 bg-white">
     <div class="container mx-auto text-center">
       <h2 class="text-2xl font-bold mb-8 text-gray-800">Support Our Cause</h2>
-      <p class="text-gray-700 mb-4">Donate to provide beds or support science education. Contributions can be made as beds or funds.</p>
+      <p class="text-gray-700 mb-4">Donate to provide beds or support science education. Dear donor, through our CBO, the TAI-Sa board is seeking assistance to procure 20 beds for 40 female students at Isendelo Secondary School, a government ward secondary school. This school is situated in a rural setting,
+approximately 10 kilometers from the Mwanza-Musoma main road. The
+school currently facilitates a preparatory camp for students who are
+gearing up for their national final examinations, which are pivotal in
+shaping their academic prospects. Nonetheless, the challenge of
+inadequate sleeping arrangements poses a significant impediment to the
+students. To ensure every student completes school, this program is
+important. Contributions can be made as beds or funds.</p>
       <button class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700">Donate Now</button>
       <p class="mt-4 text-sm">Contact us for donation details: 0758376360 (Director, Mr. Amos Kiyumbi), 0759310902 (Coordinator, Mr. Thomas Lugendo).</p>
     </div>
