--- a/index.html
+++ b/index.html
@@ -318,9 +318,9 @@ gearing up for their national final examinations, which are pivotal in
 shaping their academic prospects. Nonetheless, the challenge of
 inadequate sleeping arrangements poses a significant impediment to the
 students. To ensure every student completes school, this program is
-important. Contributions can be made as beds or funds.</p>
+important. Contributions can be made as beds or funds. Contact us for donation details: 0758376360 (Director, Mr. Amos Kiyumbi), 0759310902 (Coordinator, Mr. Thomas Lugendo).</p>
       <button class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700">Donate Now</button>
-      <p class="mt-4 text-sm">Contact us for donation details: 0758376360 (Director, Mr. Amos Kiyumbi), 0759310902 (Coordinator, Mr. Thomas Lugendo).</p>
+      <p class="mt-4 text-sm"></p>
     </div>
   </section>
 
