--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
   <header class="bg-blue-600 text-white p-4 relative">
     <div class="container mx-auto flex justify-between items-center">
       <div>
-        <img src="images/logo.jpg" alt="TAI-Sa Logo" class="logo-img">
+        <span class="text-2xl font-bold">TAI-Sa</span>
+        <img src="images/logo.jpg" alt="TAI-Sa Logo" class="text-1xl">
       </div>
       <nav class="space-x-4" id="navLinks">
         <a href="#home">Home</a>
