--- a/index.html
+++ b/index.html
@@ -262,11 +262,11 @@
       <div class="relative w-full overflow-hidden">
         <div class="flex transition-transform duration-500 ease-in-out" id="projectsCarousel">
           <div class="bg-white p-6 rounded-lg shadow-md w-1/2 flex-shrink-0">
-            <h3 class="text-xl font-semibold mb-2">Bed Project for Isendelo Secondary School</h3>
+            <h3 class="text-xl font-semibold mb-2">Bed project for Isendelo secondary school</h3>
             <p class="text-gray-700">Providing 20 beds for 40 female students preparing for national exams, ensuring a safe sleeping environment to boost academic success.</p>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md w-1/2 flex-shrink-0">
-            <h3 class="text-xl font-semibold mb-2">Science and Mancala Training</h3>
+            <h3 class="text-xl font-semibold mb-2">Science and mancala training</h3>
             <p class="text-gray-700">Training rural students in science and traditional Mancala games to foster critical thinking and cultural preservation.</p>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md w-1/2 flex-shrink-0">
