--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
 </head>
 <body class="bg-gray-100 font-sans">
   <!-- Header -->
-  <header class="bg-blue-600 text-white p-4 relative">
+  <header class="bg-gray-600 text-white p-4 relative">
     <div class="container mx-auto flex justify-between items-center">
       <div>
-        <span class="text-2xl font-bold">TAI-Sa</span>
+        <span class="text-1xl font-bold">TAI-Sa</span>
       </div>
       <nav class="space-x-4" id="navLinks">
         <a href="#home">Home</a>
