--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ important. Contributions can be made as beds or funds. Contact us for donation d
   </section>
 
   <!-- Footer -->
-  <footer class="bg-blue-600 text-white p-4 text-center">
+  <footer class="bg-gray-600 text-white p-4 text-center">
     <p>&copy; 2025 TAI-Sa. All rights reserved.</p>
   </footer>
 
