--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ important. Contributions can be made as beds or funds. Contact us for donation d
     <span id="closeVideo" onclick="closeVideo()">&times;</span>
     <h3 class="text-white text-lg mb-2">Featured TAI-Sa Video</h3>
     <video controls>
-      <source src="images/nyerere.mp4" type="video/mp4">
+      <source src="images/wigashe-1_video.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
