--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <header class="bg-gray-600 text-white p-4 relative">
     <div class="container mx-auto flex justify-between items-center">
       <div>
-        <span class="text-1xl font-bold">TAI-Sa</span>
+        <span class="text-1xl font-bold">TAI-Sa (Tagili Isolo - Sambaguli)</span>
       </div>
       <nav class="space-x-4" id="navLinks">
         <a href="#home">Home</a>
